test_report.txt

> react-typescript-starter@0.1.0 test
> react-scripts test --coverage

Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
FAIL src/nested.test.ts
  ● Test suite failed to run

    SyntaxError: Unexpected string in JSON at position 6423
        at JSON.parse (<anonymous>)

      18 |     duplicateQuestionInArray
      19 | } from "./nested";
    > 20 | import testQuestionData from "./data/questions.json";
         | ^
      21 | import backupQuestionData from "./data/questions.json";
      22 |
      23 | const {

      at Runtime._loadModule (node_modules/jest-runtime/build/index.js:1178:39)
      at Object.<anonymous> (src/nested.test.ts:20:1)

PASS src/arrays.test.ts
FAIL src/objects.test.ts
  ● Test suite failed to run

    SyntaxError: Unexpected string in JSON at position 6423
        at JSON.parse (<anonymous>)

      12 |     mergeQuestion
      13 | } from "./objects";
    > 14 | import testQuestionData from "./data/questions.json";
         | ^
      15 | import backupQuestionData from "./data/questions.json";
      16 |
      17 | ////////////////////////////////////////////

      at Runtime._loadModule (node_modules/jest-runtime/build/index.js:1178:39)
      at Object.<anonymous> (src/objects.test.ts:14:1)

PASS src/HtmlCss.test.tsx
PASS src/functions.test.ts
PASS src/text.test.tsx
PASS src/App.test.tsx
----------------|---------|----------|---------|---------|-------------------
File            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
----------------|---------|----------|---------|---------|-------------------
All files       |    45.8 |    59.64 |   38.02 |   47.14 |                   
 src            |    45.8 |    59.64 |   38.02 |   47.14 |                   
  App.tsx       |     100 |      100 |     100 |     100 |                   
  arrays.ts     |     100 |      100 |     100 |     100 |                   
  functions.ts  |     100 |      100 |     100 |     100 |                   
  nested.ts     |       0 |        0 |       0 |       0 | 11-267            
  objects.ts    |       0 |        0 |       0 |       0 | 14-176            
 src/interfaces |       0 |        0 |       0 |       0 |                   
  answer.ts     |       0 |        0 |       0 |       0 |                   
  question.ts   |       0 |        0 |       0 |       0 |                   
----------------|---------|----------|---------|---------|-------------------

Test Suites: 2 failed, 5 passed, 7 total
Tests:       23 passed, 23 total
Snapshots:   0 total
Time:        7.645 s
Ran all test suites.
